# geunbuntu-manager

./: .gitignore  README.md
dart_src/gui/lib/: main.dart
dart_src/gui/lib/common/: common.dart
dart_src/gui/lib/test/: linux_test.dart
dart_src/gui/linux/flutter/: generated_plugins.cmake
dart_src/linux_terminal/: .metadata  ffigen.yaml
dart_src/linux_terminal/example/: README.md  pubspec.yaml
dart_src/linux_terminal/example/lib/: main.dart
dart_src/linux_terminal/lib/: linux_terminal.dart  linux_terminal_bindings_generated.dart
dart_src/linux_terminal/src/: CMakeLists.txt
docs/file-manager/: dirent.md  file-permission.md  stat.md
docs/file-manager/example/: sample.c
src/ffi_test/: .metadata  README.md  pubspec.yaml
src/ffi_test/example/: README.md  pubspec.yaml
src/ffi_test/example/integration_test/: plugin_integration_test.dart
src/ffi_test/example/lib/: main.dart
src/ffi_test/example/linux/: CMakeLists.txt  my_application.cc
src/ffi_test/lib/: ffi_test.dart  ffi_test_method_channel.dart  ffi_test_platform_interface.dart
src/ffi_test/linux/: CMakeLists.txt  ffi_test_plugin.cc  ffi_test_plugin_private.h  my_application.cc
src/ffi_test/test/: ffi_test_method_channel_test.dart  ffi_test_test.dart  widget_test.dart
src/gui/: .gitignore  pubspec.yaml
src/linux_terminal/: README.md  pubspec.yaml
src/linux_terminal/lib/: linux_terminal_bindings_generated.dart
src/linux_terminal/linux/: CMakeLists.txt
src/linux_terminal/src/: CMakeLists.txt  linux_terminal.c  linux_terminal.h
src/system/file-manager/: file-permission.c  ls.c
(+6 files in other folders)
